src/test/resources/wacc_examples/invalid/semanticErr/classes/classBadScope.wacc
# function in class tries to access variable outside of scope

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  class c {
    int t,
    char c
    int f(int y) is
        int p = t + 1;
        return x
    end
  }
  c class1 = new c() ;
  int x = 4 ;
  int z = call class1.f(x)
end
